all changes implemented for further review